Base product on plugins
* Only way to include logback for zowe logging